<resources>
    <string name="app_name">Fine Dine</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="mobile">Mobile Number</string>
    <string name="sampleName">Tharushi Hettiarachchi</string>
    <string name="sampleMobile">0766365130</string>
    <string name="sampleCategory">Main Dishes</string>
    <string name="samplePrice">Rs. 1200.00</string>
    <string name="sampleProductName">Garlic Butter Herb Chicken</string>
    <string name="menuItem1">Home</string>
    <string name="menuItem2">Add Food</string>
    <string name="menuItem3">Dashboard</string>
    <string name="menuItem4">Profile</string>
    <string name="menuItem5">Logout</string>
    <string name="menuItem6">My Orders</string>
    <string name="fullPortion">Full Portion</string>
    <string name="halfPortion">Half Portion</string>
    <string name="search">Search...</string>
    <string name="view">View</string>
    <string name="password">Password</string>
    <string name="back">Back</string>
    <string name="adminSignIn">Admin Sign In</string>
    <string name="veg">Veg</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="description">Description</string>
    <string name="halfPortionPrice">Price of Half Portion</string>
    <string name="fullPortionPrice">Price of Full Portion</string>
    <string name="nameOfTheFood">Name of the Food</string>
    <string name="link1">Already have an account? Sign In</string>
    <string name="link2">Don\'t have an account? Sign Up</string>
</resources>